--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "es/index.js",
   "scripts": {
-    "build": "rimraf -rf ./dist && rollup --config",
+    "build": "rimraf -rf ./build && rollup --config",
     "lint": "eslint --fix",
     "jest": "jest",
     "prepare": "husky install"
@@ -27,11 +27,13 @@
     "@babel/preset-env": "^7.16.5",
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
+    "@rollup/plugin-html": "^0.2.4",
     "eslint": "^8.4.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.3",
     "husky": "^7.0.0",
     "lint-staged": "^12.1.2",
+    "rimraf": "^3.0.2",
     "rollup": "^2.61.1",
     "rollup-plugin-babel": "^4.4.0"
   },
