--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,23 +1,31 @@
-name: GitHub Actions Build and Deploy Demo
-on:
-  push:
-    branches:
-      - main
+name: ci
+
+on: [push, pull_request]
+
 jobs:
-  build-and-deploy:
-    runs-on: ubuntu-latest
+  build:
+    runs-on: macOS-latest
+
     steps:
       - name: Checkout
-        uses: actions/checkout@v2.3.1 # If you're using actions/checkout@v2 you must set persist-credentials t
+        uses: actions/checkout@v2.3.4
+
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v2.1.5
         with:
-          persist-credentials: false
-      - name: Install and Build
+          node-version: '12'
+
+      - name: Cache node modules
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-node-modules
+        with:
+          path: ./node_modules
+          key: ${{ runner.os }}-build-cache-node-modules-${{ hashFiles('**/package.json') }}
+          restore-keys: |
+            cache-node-modules-
+
+      - name: Run ci
         run: |
           npm install
-          npm run-script build
-      - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@4.1.1
-        with:
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-          BRANCH: gh-pages
-          folder: build # 操作应部署的文件夹
+          npm run ci
